--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,7 +91,7 @@ r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/HandheldAR/Maps/HandheldARBlankMap.HandheldARBlankMap
+EditorStartupMap=/Game/MainLevel.MainLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -99,9 +99,9 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/HandheldAR/Maps/HandheldARBlankMap.HandheldARBlankMap
+GameDefaultMap=/Game/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/HandheldAR/Blueprints/GameFramework/BP_ARGameMode.BP_ARGameMode_C
+GlobalDefaultGameMode=/Game/ARGameMode.ARGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
