--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -119,6 +119,9 @@ MobileProvision=iOS11.mobileprovision
 bSupportsPortraitOrientation=True
 bSupportsUpsideDownOrientation=False
 FrameRateLock=PUFRL_60
+bUseRSync=True
+BundleName=wya
+BundleDisplayName=wya
 
 [/Script/Engine.Engine]
 bUseFixedFrameRate=True
@@ -224,4 +227,8 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/MacTargetPlatform.XcodeProjectSettings]
+bUseModernXcode=True
+CodeSigningTeam=325A4B7NVW
 
